update comment, and change string formatting based off phil suggestion